pkg/commands/testdata/testcase-variable-ref/in/package/cockroachdb-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb-proxy
  labels:
    component: proxy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    component: proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cockroachdb-proxy
  labels:
    component: proxy
spec:
  template:
    spec:
      containers:
      - name: cockroachdb-proxy
        image: nginx:1.1.5
      ports:
      - name: http
        port: 8080
        protocol: TCP
      volumes:
      - name: tls
        secret:
          secretName: "$(CDB_CERTS_TLS_SECRET_NAME)"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cockroachdb-proxy
  labels:
    component: proxy
spec:
  rules:
  - host: cockroachdb-proxy.example.com
    http:
      paths:
      - backend:
          serviceName: cockroachdb-proxy
          servicePort: http
        path: /
  tls:
  - secretName: "$(CDB_CERTS_TLS_SECRET_NAME)"
    hosts:
    - cockroachdb-proxy.example.com
